--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,10 @@ django-database-url==1.0.3
 djangorestframework==3.15.2
 geographiclib==2.0
 geopy==2.4.1
+git-filter-repo==2.47.0
+gunicorn==23.0.0
 idna==3.10
+packaging==24.2
 psycopg2-binary==2.9.10
 python-decouple==3.8
 python-dotenv==1.0.1
